Closed Bug 96579 Opened 23 years ago Closed 19 years ago

<object> with absolute URL and without MIME type doesn't work

Categories

(Core Graveyard :: Plug-ins, defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: kazhik, Assigned: peterlubczynski-bugs)

References

(Blocks 1 open bug)

Details

(Whiteboard: [PL2:P3][object] [Hixie-P2])

Attachments

(1 file, 1 obsolete file)

<object> with absolute URL and without MIME type doesn't work.
Attached file Testcase
Blocks: html4.01
I think this is a simple fix if anyone wants to take a crack at it. 

We should be calling GetDocumentBase() instead of GetBaseURL() in
nsObjectFrame::IsSupportedDocument(). The only thing is that it returns a char *
string instead of a nsIURI so maybe we should get it directly from an nsIDocument.
Assignee: clayton → peterlubczynski
OS: Windows 2000 → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla0.9.4
Not gona make it--->mozilla0.9.5
Status: NEW → ASSIGNED
Target Milestone: mozilla0.9.4 → mozilla0.9.5
SPAM. HTML Element component deprecated, changing component to Layout. See bug
88132 for details.
Component: HTML Element → Layout
Taking a closer look, this is a different problem than I orriginally thought.
The problem seems to be that at the time we make the decision if this is going
to be a plugin, image, or document, we have not opened the stream to look at the
content-type header. Because of bug 95549 and/or bug 95548, I can not fix this
at this time.

The workaround at this time is to either force a document mime-type with an
attribute or be sure to include the document extension in the URL.


Depends on: 95549
Target Milestone: mozilla0.9.5 → mozilla1.0
Attached patch patch to avoid crash (obsolete) — Splinter Review
r=av
Comment on attachment 49133 [details] [diff] [review]
patch to avoid crash

sr=attinasi on this patch (I guess GetTypeFromURI does not set the out param on FAILURE?)
Attachment #49133 - Flags: superreview+
Note: this bug is not about a crash. I happen to find this crash while using the
testcase to look at this bug. Fix for crash checked into trunk but it should
probably also go on the branch.
Keywords: crash, nsbranch
Keywords: patch, review
Whiteboard: [seeking approvals]
Whiteboard: [seeking approvals] → [patch in trunk]
Marking nsbranch+.
Keywords: nsbranchnsbranch+
orriginal issue not fixed yet
Whiteboard: [patch in trunk]
QA Contact: bsharma → moied
Peter - Is this something we should get on the branch?
Keywords: nsbranch+
general problem described in bug still going on but it's not serious. However,
the crash has gone (probably with another fix), so this is no longer a nsbranch
candidate.
Keywords: nsbranch+
Bugs targeted at mozilla1.0 without the mozilla1.0 keyword moved to mozilla1.0.1 
(you can query for this string to delete spam or retrieve the list of bugs I've 
moved)
Target Milestone: mozilla1.0 → mozilla1.0.1
Attachment #49133 - Attachment is obsolete: true
*** Bug 127963 has been marked as a duplicate of this bug. ***
1.2
Component: Layout → Plug-ins
Whiteboard: [object]
Target Milestone: mozilla1.0.1 → mozilla1.2alpha
Whiteboard: [object] → [object] [Hixie-P2]
*** Bug 153920 has been marked as a duplicate of this bug. ***
Depends on: 157554
Whiteboard: [object] [Hixie-P2] → [PL2:P3][object] [Hixie-P2]
Target Milestone: mozilla1.2alpha → mozilla1.1alpha
Target Milestone: mozilla1.1alpha → mozilla1.2beta
Target Milestone: mozilla1.2beta → Future
Note that this makes it impossible to use content negotiation (which provides
multiple representations of the same object).

For example:

The W3C 'valid XHTML 1.1' image is at http://www.w3.org/Icons/valid-xhtml11
Depending on your Accept header, you'll either get a PNG or a GIF image when you
request the image.

Obviously, if we need to specify the image type on the OBJECT element in
advance, we can't take advantage of CONNEG.
Status: ASSIGNED → NEW
Blocks: 96976
fixed by bug 1156 (I want to note that the relative URL only used to work
because it had an .html extension, which gecko mapped to text/html).
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
*** Bug 353119 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: