Fix for crash when checking for a sub document bug 96579 r=av sr=attinasi